--- a/.github/workflows/melTest.yml
+++ b/.github/workflows/melTest.yml
@@ -8,7 +8,7 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@master
-      - name: whatsapp-notify
+      - name: Whatsapp Notify
         id: whatsapp-notify
         env:
           account_sid: ${{ secrets.account_sid }}
@@ -18,6 +18,14 @@ jobs:
 
         uses: ishween/whatsapp-push-notify-action@master
       
-      - name : Run
+      - name : Telegram Notify
         run: |
           echo 'Start!'
+      
+      - uses: actions/checkout@master
+      - name: send custom Telegram message with args
+        uses: appleboy/telegram-action@master
+        with:
+          to: ${{ secrets.TELEGRAM_TO }}
+          token: ${{ secrets.TELEGRAM_TOKEN }}
+          args: The ${{ github.event_name }} event triggered first step.
